crates/toml/tests/snapshots/invalid/string/basic-byte-escapes.stderr
TOML parse error at line 1, column 12
  |
1 | answer = "\x33"
  |            ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
